print works